<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReglageActivity">

    <Button
        android:id="@+id/backReglageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/back_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="80dp" />

    <TextView
        android:id="@+id/titleLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_length"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout" />

    <TextView
        android:id="@+id/lengthView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/default_value_length"
        app:layout_constraintBottom_toBottomOf="@+id/titleLength"
        app:layout_constraintStart_toEndOf="@+id/titleLength" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <TextView
            android:id="@+id/lengthMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_value_length"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <SeekBar
            android:id="@+id/lengthBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:max="4"
            android:progress="2"
            app:layout_constraintEnd_toStartOf="@+id/lengthMax"
            app:layout_constraintStart_toEndOf="@+id/lengthMin"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lengthMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_value_length"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/titleColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_color"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout2" />

    <TextView
        android:id="@+id/colorView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/default_value_color"
        app:layout_constraintBottom_toBottomOf="@+id/titleColor"
        app:layout_constraintStart_toEndOf="@+id/titleColor" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <TextView
            android:id="@+id/colorMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_value_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <SeekBar
            android:id="@+id/colorBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:max="6"
            android:progress="6"
            app:layout_constraintEnd_toStartOf="@+id/colorMax"
            app:layout_constraintStart_toEndOf="@+id/colorMin"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/colorMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_value_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/titleTries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_tries"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout3" />

    <TextView
        android:id="@+id/triesView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/default_value_tries"
        app:layout_constraintBottom_toBottomOf="@+id/titleTries"
        app:layout_constraintStart_toEndOf="@+id/titleTries" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <TextView
            android:id="@+id/triesMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_value_tries"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <SeekBar
            android:id="@+id/triesBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:max="4"
            android:progress="2"
            app:layout_constraintEnd_toStartOf="@+id/triesMax"
            app:layout_constraintStart_toEndOf="@+id/triesMin"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/triesMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_value_tries"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>